Tests/ContributeWordPressTests/Errors/SitesExportSynDecoderError.swift
import Foundation

enum SitesExportSynDecoderError: String, EquatableError {
  case fileURLsFromDirectory
}
